FIX :: todo -> goal, team -> member로 조회하도록 변경