@@ -1,6 +1,7 @@
 package com.ullim.ssomserver.domain.team.service;
 
-import com.ullim.ssomserver.domain.team.domain.repository.TeamRepository;
+import com.ullim.ssomserver.domain.team.domain.Member;
+import com.ullim.ssomserver.domain.team.domain.repository.MemberRepository;
 import com.ullim.ssomserver.domain.team.presentation.dto.response.TeamListResponseDto;
 import com.ullim.ssomserver.domain.team.presentation.dto.response.TeamResponseDto;
 import com.ullim.ssomserver.domain.user.domain.User;
@@ -9,22 +10,25 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import javax.transaction.Transactional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class GetTeamListService {
 
-    private final TeamRepository teamRepository;
+    private final MemberRepository memberRepository;
     private final UserFacade userFacade;
 
     @Transactional
-    public TeamListResponseDto execute(){
+    public TeamListResponseDto execute() {
         User user = userFacade.getCurrentUser();
 
         return new TeamListResponseDto(
-                teamRepository.findTeamByUser(user)
-                        .stream().map(TeamResponseDto::of)
-                        .toList()
+                memberRepository.findByUser(user)
+                        .stream()
+                        .map(Member::getTeam)
+                        .map(TeamResponseDto::of)
+                        .collect(Collectors.toList())
         );
     }
 
